force-app/main/default/objects/Remittance__c/Remittance__c.object-meta.xml
<CustomObject>
    <description>[a0I][Remittance__c] Pedidos de remessa.</description>
    <label>Remessa</label>
    <nameField>
        <label>Número da Remessa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Remessas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>