force-app/main/default/objects/Remittance__c/fields/AccountLkp__c.field-meta.xml
<CustomField>
    <fullName>AccountLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recebedor mercadoria</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Remessas</relationshipLabel>
    <relationshipName>Remessas</relationshipName>
    <type>Lookup</type>
</CustomField>