force-app/main/default/objects/Remittance__c/fields/CarrierLkp__c.field-meta.xml
<CustomField>
    <fullName>CarrierLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transportadora</label>
    <referenceTo>Carrier__c</referenceTo>
    <relationshipLabel>Remessas</relationshipLabel>
    <relationshipName>Remessas</relationshipName>
    <type>Lookup</type>
</CustomField>