force-app/main/default/objects/Remittance__c/fields/DocumentDateDte__c.field-meta.xml
<CustomField>
    <fullName>DocumentDateDte__c</fullName>
    <label>Data da remessa</label>
    <type>Date</type>
</CustomField>