force-app/main/default/objects/Remittance__c/fields/InLadingDte__c.field-meta.xml
<CustomField>
    <fullName>InLadingDte__c</fullName>
    <label>Em carregamento</label>
    <type>Date</type>
</CustomField>