force-app/main/default/objects/Remittance__c/fields/Ordem_RMTSAP__c.field-meta.xml
<CustomField>
    <fullName>Ordem_RMTSAP__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp;OrderLkp__r.Id, OrderLkp__r.CustomIDTxt__c,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número da ordem SAP</label>
    <type>Text</type>
</CustomField>