force-app/main/default/objects/Remittance__c/fields/OrderLkp__c.field-meta.xml
<CustomField>
    <fullName>OrderLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Número da ordem</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Remessas</relationshipLabel>
    <relationshipName>Remessas</relationshipName>
    <type>Lookup</type>
</CustomField>