force-app/main/default/objects/Remittance__c/fields/RemittanceStatusBln__c.field-meta.xml
<CustomField>
    <fullName>RemittanceStatusBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remessa cancelada</label>
    <type>Checkbox</type>
</CustomField>