force-app/main/default/objects/Remittance__c/fields/ShipmentFinishedDte__c.field-meta.xml
<CustomField>
    <fullName>ShipmentFinishedDte__c</fullName>
    <label>Carregamento finalizado</label>
    <type>Date</type>
</CustomField>