force-app/main/default/objects/Remittance__c/fields/ShipmentTransitDte__c.field-meta.xml
<CustomField>
    <fullName>ShipmentTransitDte__c</fullName>
    <label>Mercadoria embarcada</label>
    <type>Date</type>
</CustomField>