force-app/main/default/objects/Remittance__c/fields/StatusFml__c.field-meta.xml
<CustomField>
    <fullName>StatusFml__c</fullName>
    <formula>IF(
   RemittanceStatusBln__c = TRUE, &quot;Remessa cancelada&quot;,
   IF(
      NOT(ISBLANK( ShipmentDeliveredDte__c )) , &quot;Mercadoria entregue&quot;,
      IF(
         NOT(ISBLANK( ShipmentTransitDte__c )), &quot;Mercadoria em transito&quot;,
         IF(
            NOT(ISBLANK(  ShipmentFinishedDte__c )), &quot;Carregamento finalizado&quot;,
            IF(
               NOT(ISBLANK(   InLadingDte__c )), &quot;Em carregamento&quot;,
&quot;&quot;)))))</formula>
    <inlineHelpText>Status de acordo com as datas de carregamento até data de Mercadoria entregue.</inlineHelpText>
    <label>Status da remessa</label>
    <type>Text</type>
</CustomField>