force-app/main/default/objects/Remittance__c/fields/TotalWeightNmb__c.field-meta.xml
<CustomField>
    <fullName>TotalWeightNmb__c</fullName>
    <label>Peso total</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>