force-app/main/default/objects/Remittance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DocumentDateDte__c</columns>
    <columns>StatusFml__c</columns>
    <columns>CarrierLkp__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>